<resources>
    <string name="version">.9</string>
    <string name="build">101</string>
    <string name="app_id">314938401925933</string>
    <string name="admob_pub_id_main_landing">a150e5e3748e238</string>
    <string name="admob_pub_id_interstitial">a150e6e3f4832b4</string>
    <string name="admob_pub_id_badges">a150e7b31dd0858</string>
    <string name="admob_pub_id_full_rules">a150e7b398d7ec4</string>
    <string name="admob_pub_id_condensed_rules">a150e7b4dc8b49f</string>
    <string name="admob_pub_id_game_played_words">a150e7b549b5cb3</string>
    <string name="admob_pub_id_game_word_definition">a15124d73407724</string>
    <string name="admob_pub_id_options">a150e7b841d7e88</string>
    <string name="gcm_sender_id">505875093616</string>
    <string name="wordnik_apiKey">48f31f368d20791114b01067e1d05b68ca177aabdbab4150b</string>
    <string name="chartboost_app_id">5126a10716ba477b0e000019</string>
    <string name="chartboost_app_signature">cc41971b1b681903b94c7c666f88d83d7da43762</string>
    <string name="rev_mob_app_id">5128d7dbffe6c2180000000b</string>
    <string name="rev_mob_main_landing_banner">5128d816f95d861800000069</string>
    <string name="rev_mob_main_between_play">5128d816f95d861800000069</string>
    <string name="playtomics_guid">677d2619c62640b5</string>
	<string name="playtomics_api_key">c77086d28be34cdaa1f3db380fb381</string>
    <string name="app_name">WordSmash</string>
    <string name="join_via_facebook">connect with facebook</string>
	<string name="join_via_native">connect with your email address</string>
	<string name="join_title">Join WordSmash to get started</string>
	<string name="logo">logo</string>
	<string name="enter_email">enter email</string>
	<string name="enter_password">enter password</string>
	<string name="enter_new_password">enter new password</string>
	<string name="enter_confirm_password">confirm your password</string>
	<string name="account_settings_change_password">change password</string>
	<string name="enter_nickname">enter nickname</string>
	<string name="email">email address</string>
	<string name="nickname">nickname</string>
	<string name="password">password</string>
	<string name="change_password">change your password</string>
	<string name="save">save</string>
	<string name="connect">connect</string>
	<string name="send">send</string>
	<string name="back">back</string>
	<string name="badges">badges</string>
	<string name="settings">settings</string>
	<string name="account_settings">account settings</string>
	<string name="fb_account_settings">manage your nickname</string>
	<string name="options_profile_image">your profile image</string>
	<string name="options">options</string>
	<string name="logout">logout</string>
	<string name="rules">game rules</string>
	<string name="create_game">start a game</string>
	<string name="success">success!</string>
	<string name="try_again">Try Again</string>
	<string name="second">days</string>
	<string name="seconds">seconds</string>
	<string name="minute">minute</string>
	<string name="minutes">minutes</string>
	<string name="cancel">cancel</string>
	<string name="header_1_win">1 win</string>
	<string name="header_num_wins">%s wins</string>
	<string name="line_item_invited">invited, but not registered yet</string>
	<string name="line_item_1_win">1 win</string>
	<string name="line_item_num_wins">%s wins</string>
	<string name="never_share_email">(will never be shared, not ever)</string>
	<string name="msg_no_local_player">WordSmash cannot find the player Id that should be stored on this device.</string>
	<string name="msg_no_local_player_token">WordSmash cannot find the complete player Id that should be stored on this device.</string>
	<string name="msg_not_connected">WordSmash cannot find a network connection. To work properly, WordSmash has to talk to the mother ship.</string>
	<string name="msg_connection_timeout">The network connection took too long to return. To work properly, WordSmash has to talk to the mother ship.</string>
	<string name="validation_max_games_reached">You\'ve reached the maximum number of active games.</string>
	<string name="validation_email_required">Please enter your email to connect to play.  Never fear, it will not be shared.</string>
	<string name="validation_nickname_required">Please enter your nickname.  This will be the name to other players see.</string>
	<string name="validation_nickname_invalid">Your nickname can only contain letters, numbers, spaces, dots, and hyphens.</string>
	<string name="validation_password_required">Please enter a password.</string>
	<string name="validation_auth_token_required">Auth token is required.</string>
	<string name="validation_email_invalid">Please enter a valid email to connect to play.  We\'ll never share it, we just may send game-related emails out every now and then.  Did we mention we\'ll never share it?</string>
	<string name="validation_nickname_required_for_search">Please enter the nickname of the opponent you are trying to find.</string>
	<string name="validation_too_many_players">Sorry, a maximum of four players can be added to a game.</string>
	<string name="validation_incorrect_context_player">Sorry, only the logged in user can start a game.</string>
	<string name="validation_nickname_already_taken">This nickname is already in use by another player.</string>
	<string name="validation_email_already_taken">This email is already in use by another player.</string>
	<string name="validation_email_not_supplied">Please enter an email address.</string>
	<string name="validation_incorrect_password">The password is incorrect.</string>
	<string name="validation_email_connected_via_fb">This email has already been connected via Facebook.  Please choose another email address or connect with Facebook.</string>
	<string name="validation_unspecified_error">The error could not be determined.  Please try again later.</string>
	<string name="validation_404_error">The server could not be found.  Please try again later.</string>
	<string name="validation_token_not_found">The auth token could not be found.</string>
	<string name="validation_new_password_not_provided">Please enter the new password.</string>
	<string name="validation_password_too_short">Please enter a password that is at least 4 characters long.</string>
	<string name="validation_password_confirmation_failed">Please reconfirm your new password.</string>
	<string name="validation_unauthorized">This action is unauthorized.</string>
	<string name="validation_nickname_not_supplied">Please enter a nickname.</string>
	<string name="validation_email_is_already_in_use">The email associated with your Facebook account has already been registered in WordSmash.</string>
	<string name="validation_cannot_add_yourself">You cannot add yourself as an opponent.</string>
	<string name="validation_opponent_already_added">%s has already been added as an opponent.</string>
	<string name="validation_must_have_between_2_and_4_players">The game must have either 2, 3, or 4 players.</string>
	<string name="ok">ok</string>
	<string name="yes">yes</string>
	<string name="no">no</string>
	<string name="oops">Oops</string>
	<string name="facebook">facebook</string>
	<string name="sorry">Sorry</string>
	<string name="error_title">Holy Gandalf!!</string>
	<string name="error_message">Unfortunately, something messy happened down in the bowels of the code. Not to worry, we will get it fixed.  In the meantime, you might want to restart WordSmash.</string>
	<string name="welcome_message">welcome to WordSmash</string>
	<string name="welcome_sub_message">come on in&#8230;competition is waiting!!</string>
	<string name="response_in_error">Something funky happened when communicating with the mother ship.</string>
	<string name="join_with_email_title">connect with your email</string>
 	<string name="join_with_email_subtitle">and choose a nickname</string>
 	<string name="start_game">start a game</string>
 	<string name="start_game_sub">choose up to 3 opponents</string>
 	<string name="start_game_fb_friends">choose from facebook friends</string>
 	<string name="start_game_prev_opponents">choose from previous opponents</string>
 	<string name="start_game_by_nickname">find opponent by nickname</string>
 	<string name="start_game_by_random">add a random opponent</string>
 	<string name="progress_looking_up">looking up&#8230;</string>
 	<string name="progress_loading">loading&#8230;</string>
 	<string name="progress_sending">sending&#8230;</string>
 	<string name="progress_saving">saving&#8230;</string>
 	<string name="progress_checking">checking&#8230;</string>
 	<string name="progress_searching">searching&#8230;</string>
 	<string name="progress_connecting">connecting&#8230;</string>
 	<string name="progress_cancelling">cancelling&#8230;</string>
 	<string name="quick_rules_title">condensed game rules</string>
 	<string name="quick_rules_subtitle">enough to get you off and running</string>
  	<string name="quick_rules_1">To start the game, a letter of the first word must be placed on at least one of the smiley faces.</string>
  	<string name="quick_rules_2">Then take turns forming valid words by dragging letters from your tray to the board. At least one of your placed letters must connect to (or be placed on top of) letters already placed on the board in previous turns.</string>
 	<string name="quick_rules_3">During a turn, be sure to place all of your letters in a single line, either vertically or horizontally.</string>
 	<string name="quick_rules_4">If it\'s your turn, you can also skip the turn or swap letters.</string>
 	<string name="quick_rules_5">Keep it up until all the letters are used.  The player with the highest score wins.</string>
	<string name="test_landing_title">Test Landing</string>
	<string name="test_landing_main_landing">Start Game</string>
	<string name="test_landing_join_native">Join Native</string>
	<string name="test_landing_welcome">Welcome</string>
	<string name="test_landing_rules">Rules</string>
	<string name="test_landing_badges">Badges</string>
	<string name="test_landing_game_surface">Game Surface</string>
	<string name="badges_title">badges</string>
	<string name="badges_subtitle">a better badge means more wins</string>
	<string name="badges_invited">invited, but not registered yet</string>
	<string name="badges_0">no wins yet</string>
	<string name="badges_1_4">under 5 wins</string>
	<string name="badges_5_9">between 5 and 9 wins</string>
 	<string name="badges_10_14">between 10 and 14 wins</string>
 	<string name="badges_15_19">between 15 and 19 wins</string>
 	<string name="badges_20_24">between 20 and 24 wins</string>
 	<string name="badges_25_29">between 25 and 29 wins</string>
 	<string name="badges_30_39">between 30 and 39 wins</string>
 	<string name="badges_40_49">between 40 and 49 wins</string>
 	<string name="badges_50_59">between 50 and 59 wins</string>
 	<string name="badges_60_69">between 60 and 69 wins</string>
 	<string name="badges_70_79">between 70 and 79 wins</string>
 	<string name="badges_80_89">between 80 and 89 wins</string>
 	<string name="badges_90_99">between 90 and 99 wins</string>
 	<string name="badges_100_124">between 100 and 124 wins</string>
 	<string name="badges_125_149">between 125 and 149 wins</string>
 	<string name="badges_150_174">between 150 and 174 wins</string>
 	<string name="badges_175_199">between 175 and 199 wins</string>
 	<string name="badges_200_224">between 200 and 224 wins</string>
 	<string name="badges_225_249">between 225 and 249 wins</string>
 	<string name="badges_250_274">between 250 and 274 wins</string>
 	<string name="badges_275_299">between 275 and 299 wins</string>
 	<string name="badges_300_349">between 300 and 349 wins</string>
 	<string name="badges_350_399">between 350 and 399 wins</string>
 	<string name="badges_400_449">between 400 and 449 wins</string>
 	<string name="badges_450_499">between 450 and 499 wins</string>
 	<string name="badges_500_or_more">500 or more wins</string>
</resources>