<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    >
    
    	<com.google.ads.AdView  
          android:id="@+id/adView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           ads:adUnitId="@string/admob_pub_id_badges"
           android:layout_centerHorizontal="true" 
           ads:adSize="BANNER"
           ads:testDevices="TEST_EMULATOR"
           ads:loadAdOnCreate="true"/>
<LinearLayout 
    android:layout_above="@id/adView" 
    style="@style/LayoutStyle"
    android:orientation="vertical" >
   
   <include android:id="@+id/topAreaLayout" layout="@layout/toparealayout" />

    <LinearLayout 
           style="@style/LayoutFormStyle"
            android:orientation="vertical"
          
        > 
	<LinearLayout
		style="@style/FormBackgroundStyle"
		android:layout_marginBottom="5dp"
	>
	<RelativeLayout
		style="@style/FormHeaderWrapperWithSubtitleStyle"
		android:id="@+id/header"
	>
    <com.riotapps.word.ui.MainFontTextView
        style="@style/FormHeaderAreaTextStyle"
        android:text="@string/badges_title" 
  	  	android:id="@+id/title"
        />
     <com.riotapps.word.ui.MainFontTextView
        style="@style/FormHeaderAreaSubTextStyle"
        android:text="@string/badges_subtitle" 
        android:layout_below="@id/title"
        />
    </RelativeLayout> 
     <LinearLayout 
            style="@style/ContentAreaTextBottomStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical"
        >
    <ScrollView   
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent" 
    	android:fadingEdge="none"
     
    	 >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical"
        >
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_invited" 
		android:drawableLeft="@drawable/badge_invited"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_0" 
		android:drawableLeft="@drawable/badge_0"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_1_4" 
		android:drawableLeft="@drawable/badge_1_4"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_5_9" 
		android:drawableLeft="@drawable/badge_5_9"
        />
   <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_10_14" 
		android:drawableLeft="@drawable/badge_10_14"
        />
   <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_15_19" 
		android:drawableLeft="@drawable/badge_15_19"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_20_24" 
		android:drawableLeft="@drawable/badge_20_24"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_25_29" 
		android:drawableLeft="@drawable/badge_25_29"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_30_39" 
		android:drawableLeft="@drawable/badge_30_39"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_40_49" 
		android:drawableLeft="@drawable/badge_40_49"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_50_59" 
		android:drawableLeft="@drawable/badge_50_59"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_60_69" 
		android:drawableLeft="@drawable/badge_60_69"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_70_79" 
		android:drawableLeft="@drawable/badge_70_79"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_80_89" 
		android:drawableLeft="@drawable/badge_80_89"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_90_99" 
		android:drawableLeft="@drawable/badge_90_99"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_100_124" 
		android:drawableLeft="@drawable/badge_100_124"
        />
    
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_125_149" 
		android:drawableLeft="@drawable/badge_125_149"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_150_174" 
		android:drawableLeft="@drawable/badge_150_174"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_175_199" 
		android:drawableLeft="@drawable/badge_175_199"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_200_224" 
		android:drawableLeft="@drawable/badge_200_224"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_225_249" 
		android:drawableLeft="@drawable/badge_225_249"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_250_274" 
		android:drawableLeft="@drawable/badge_250_274"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_275_299" 
		android:drawableLeft="@drawable/badge_275_299"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_300_349" 
		android:drawableLeft="@drawable/badge_300_349"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_350_399" 
		android:drawableLeft="@drawable/badge_350_399"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_400_449" 
		android:drawableLeft="@drawable/badge_400_449"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_450_499" 
		android:drawableLeft="@drawable/badge_450_499"
        />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/BadgeLineStyle"
        android:text="@string/badges_500_or_more" 
		android:drawableLeft="@drawable/badge_500_599"
        />
     
     </LinearLayout>
 
     </ScrollView>
   </LinearLayout>
   
   
     </LinearLayout>
    
    </LinearLayout>

</LinearLayout>
  
</RelativeLayout>
  