<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="none" >
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
		style="@style/TabContentBackgroundStyle">
    <com.riotapps.word.ui.MainFontTextView
        style="@style/ContentAreaTextStyle"
        android:text="@string/quick_rules_1" 
        />
   <com.riotapps.word.ui.MainFontTextView
       style="@style/ContentAreaTextAreaStyle"
        android:text="@string/quick_rules_2" 
        />	
   <com.riotapps.word.ui.MainFontTextView
       style="@style/ContentAreaTextAreaStyle"
        android:text="@string/quick_rules_3" 
        />
   <com.riotapps.word.ui.MainFontTextView
       style="@style/ContentAreaTextAreaStyle"
        android:text="@string/quick_rules_4" 
        />
   <com.riotapps.word.ui.MainFontTextView
       style="@style/ContentAreaTextAreaBottomStyle"
        android:text="@string/quick_rules_5" 
        />
</LinearLayout>
</ScrollView>