<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:paddingLeft="25dp"
    android:paddingRight="25dp" 
    >
     <ImageView 
       android:id="@+id/logo"
	    android:src="@drawable/wordsmash_logo1"
	    android:contentDescription="@string/logo"
	     android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="20dp"
	    />
      <TextView
     	android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" 
        android:paddingLeft="4.0dip"
        android:layout_below="@id/logo"/>
 	<TextView
     	android:id="@+id/email_guarantee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/never_share_email" 
        android:paddingLeft="4.0dip"
        android:layout_toRightOf="@id/email_label"
        android:layout_below="@id/logo" 
       />
 	<EditText 
	    android:id="@+id/tEmail"
	    android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
  	    android:layout_centerHorizontal="true"
  	    android:layout_below="@id/email_label"
  	   android:typeface="normal"
	  />
	 <TextView
     	android:id="@+id/nickname_label"
     	android:text="@string/nickname"   
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tEmail" 
        android:paddingLeft="4.0dip"
     />
	<EditText 
	    android:id="@+id/tNickname"
	    android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/enter_nickname"
  	    android:layout_centerHorizontal="true"
  	    android:layout_below="@id/nickname_label" 
	    />
	<TextView
	    android:id="@+id/password_label" 
	    android:text="@string/password"     	
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4.0dip"
        android:layout_below="@id/tNickname" /> 
    
	<EditText 
	    android:id="@+id/tPassword"
	    android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
  	    android:layout_centerHorizontal="true"
  	    android:layout_below="@id/password_label"
	    />
	 <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingTop="18.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@+id/tPassword">
  	<Button 
  	    style="@style/ButtonStyle"
  	    android:id="@+id/bSave"
        android:layout_width="0dp" 
        android:layout_weight="1.0"
        android:text="@string/save"
    />
    <Button 
        style="@style/ButtonStyle"
        android:id="@+id/bCancel"
        android:layout_width="0dp"
        android:layout_weight="1.0"
        android:text="@string/cancel"
    />
    </LinearLayout>
</RelativeLayout>