<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/LayoutFormStyle" >
     <ImageView 
       android:id="@+id/logo"
       android:contentDescription="@string/logo"
	   style="@style/TopLogoStyle" 
	   />
    <RelativeLayout
		style="@style/FormBackgroundStyle"
		android:layout_marginTop="5dp"
	>
	<RelativeLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/form_top_background"
		android:layout_below="@id/logo"
		android:id="@+id/header"
	>
    <com.riotapps.word.utils.TypefaceTextView
        style="@style/HeaderTopLayoutStyle"
        android:text="@string/quick_rules_title" 
       	android:id="@+id/welcome_msg"
        android:layout_below="@id/logo"
        />
    <com.riotapps.word.utils.TypefaceTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="12dp"
        android:textStyle="bold"
        android:text="@string/quick_rules_subtitle" 
       	android:id="@+id/welcome_sub_msg"
        android:layout_below="@id/welcome_msg"
	 	android:gravity="center_horizontal"
	 	android:paddingBottom="8dp"
 	 
		 
        />
    </RelativeLayout> 
    <com.riotapps.word.utils.TypefaceTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#1874CD"
        android:background="#fff5ee"
        android:textSize="12dp"
        android:textStyle="bold"
        android:text="@string/quick_rules_1" 
        android:id="@+id/quick_rule1"
    	android:padding="5dp"
		android:layout_below="@id/header"
        />
   <com.riotapps.word.utils.TypefaceTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#1874CD"
        android:background="#fff5ee"
        android:textSize="12dp"
        android:textStyle="bold"
	 	android:padding="5dp"
        android:text="@string/quick_rules_2" 
        android:id="@+id/quick_rule2"
        android:layout_below="@id/quick_rule1"
		android:layout_marginTop=".25dp"
		android:clickable="true"
        />	
    <com.riotapps.word.utils.TypefaceTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#1874CD"
        android:background="#fff5ee"
        android:textSize="12dp"
        android:textStyle="bold"
	 	android:padding="5dp"
        android:text="@string/quick_rules_3" 
        android:id="@+id/quick_rule3"
        android:layout_below="@id/quick_rule2"
		android:layout_marginTop=".25dp"
		android:clickable="true"
        />
     <com.riotapps.word.utils.TypefaceTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#1874CD"
        android:background="#fff5ee"
        android:textSize="12dp"
        android:textStyle="bold"
	 	android:padding="5dp"
        android:text="@string/quick_rules_4" 
        android:id="@+id/quick_rule4"
        android:layout_below="@id/quick_rule3"
		android:layout_marginTop=".25dp"
		android:clickable="true"
        />	
      <com.riotapps.word.utils.TypefaceTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#1874CD"
        android:background="#fff5ee"
        android:textSize="12dp"
        android:textStyle="bold"
	 	android:padding="5dp"
        android:text="@string/quick_rules_5" 
        android:id="@+id/quick_rule5"
        android:layout_below="@id/quick_rule4"
		android:layout_marginTop=".25dp"
		android:clickable="true"
        />	
    </RelativeLayout>
</RelativeLayout>