<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutStyle"
    android:orientation="vertical" >
   <include android:id="@+id/topAreaLayout" layout="@layout/toparealayout" />
    <LinearLayout 
           style="@style/LayoutFormStyle"
           android:layout_below="@id/topAreaLayout"
        > 
     <LinearLayout
	        	android:layout_marginBottom="5dp"
	        	android:id="@+id/llButtons"
	         >
            <com.riotapps.word.utils.TypefaceButton 
		  	    style="@style/MainLandingButtonStyle"
		  	    android:id="@+id/bOptions" 
		        android:layout_width="0dp" 
		        android:layout_weight="1.0"
		        android:text="@string/options"
		    />
			<com.riotapps.word.utils.TypefaceButton 
		  	    style="@style/MainLandingButtonStyle"
		  	    android:id="@+id/bBadges" 
		        android:layout_width="0dp" 
		        android:layout_weight="1.0"
		        android:text="@string/badges"
		    />
    </LinearLayout>   
        
        
    <ScrollView 
   		android:layout_width="fill_parent"
   		android:layout_height="fill_parent" 
   		android:fadingEdge="none">
   		<LinearLayout
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:orientation="vertical"
   		    >
    <RelativeLayout
		style="@style/FormBackgroundStyle"
		android:layout_marginTop="5dp"
	>
	<RelativeLayout
		style="@style/FormHeaderWrapperWithSubtitleStyle"
		android:id="@+id/header"
	>
    <com.riotapps.word.ui.MainFontTextView
        style="@style/FormHeaderAreaTextStyle"
        android:text="@string/start_game" 
       	android:id="@+id/title"
    />
    <com.riotapps.word.ui.MainFontTextView
        style="@style/FormHeaderAreaSubTextStyle"
        android:text="@string/start_game_sub" 
        android:layout_below="@id/title"
        />
    </RelativeLayout>
    <LinearLayout 
          android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:orientation="vertical"
   		    android:layout_below="@id/header" > 
	  	  <com.riotapps.word.ui.MainFontTextView
	        style="@style/TextStyle"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:background="@drawable/text_selector"
	        android:text="@string/start_game_fb_friends" 
	        android:id="@+id/tvStartByFacebook"
			android:clickable="true"
			android:gravity="center"
			
	        />
	   <com.riotapps.word.ui.MainFontTextView
	        style="@style/TextStyle"
	        android:background="@drawable/text_selector"
	        android:text="@string/start_game_prev_opponents" 
	        android:id="@+id/tvStartByOpponent"
			android:clickable="true"
			android:gravity="center"
			 
			android:layout_marginTop=".5dp"
			android:layout_height="50dp"
	        />
	   <com.riotapps.word.ui.MainFontTextView
	        style="@style/TextStyle"
	        android:background="@drawable/text_selector_bottom"
	        android:text="@string/start_game_by_nickname" 
	        android:id="@+id/tvStartByNickname"
			android:gravity="center"
			 
			android:layout_marginTop=".5dp"
			android:layout_height="50dp"
	        />
	  
	       </LinearLayout>
    </RelativeLayout>
    </LinearLayout>
    </ScrollView>
     </LinearLayout>
</RelativeLayout>