<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutFormStyle"
    android:orientation="vertical" >
     <ImageView 
       android:id="@+id/logo"
       android:contentDescription="@string/logo"
	    style="@style/TopLogoStyle" 
	  />
	<LinearLayout
		style="@style/FormBackgroundStyle"
		android:layout_marginTop="5dp"
	>
	<RelativeLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="45dp"
		android:background="@drawable/form_top_background"
		android:id="@+id/header"
	>
    <com.riotapps.word.ui.MainFontTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/test_landing_title" 
        android:layout_below="@id/logo"
	 	android:gravity="center_horizontal"
	  	android:paddingTop="8dp"
        />
    </RelativeLayout> 
    <ScrollView
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:fillViewport="true" 
        >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical"
  
        >
    <com.riotapps.word.ui.MainFontTextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        style="@style/TextStyle"
        android:background="@drawable/text_selector"
        android:text="@string/test_landing_join_native" 
        android:id="@+id/testLandingJoinNative"
    	android:paddingLeft="20dp"
		android:clickable="true"
		android:gravity="center_vertical"
        />
     <com.riotapps.word.ui.MainFontTextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/text_selector"
		style="@style/TextStyle"
        android:text="@string/test_landing_main_landing" 
        android:id="@+id/testLandingMainLanding"
    	android:paddingLeft="20dp"
		android:clickable="true"
		android:gravity="center_vertical"
		android:layout_marginTop="1dp"
        />
      <com.riotapps.word.ui.MainFontTextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/text_selector"
        style="@style/TextStyle"
        android:text="@string/test_landing_rules" 
        android:id="@+id/testLandingRules"
    	android:paddingLeft="20dp"
		android:clickable="true"
		android:gravity="center_vertical"
		android:layout_marginTop="1dp"
        />
      <com.riotapps.word.ui.MainFontTextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/text_selector"
        style="@style/TextStyle"
        android:text="@string/test_landing_badges" 
        android:id="@+id/testLandingBadges"
    	android:paddingLeft="20dp"
		android:clickable="true"
		android:gravity="center_vertical"
		android:layout_marginTop="1dp"
        />
     <com.riotapps.word.ui.MainFontTextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/text_selector"
        style="@style/TextStyle"
	 	android:gravity="center_vertical"
        android:text="@string/test_landing_game_surface" 
        android:id="@+id/testLandingGameSurface"
		android:layout_marginTop="1dp"
		android:clickable="true"
		android:paddingLeft="20dp"
        />    
   	<com.riotapps.word.ui.MainFontTextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/text_selector_bottom"
        style="@style/TextStyle"
	 	android:gravity="center_vertical"
        android:text="@string/test_landing_welcome" 
        android:id="@+id/testLandingWelcome"
		android:layout_marginTop="1dp"
		android:clickable="true"
		android:paddingLeft="20dp"
        />

    </LinearLayout>	
    </ScrollView>
    </LinearLayout>
</LinearLayout>